# kafkaescli

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  genindex.html  index.html  kafkaescli.code-workspace  objects.inv  pipeline.dockerfile  pyproject.toml  search.html  searchindex.js  setup.py
.circleci/: config.yml
docs/: architecture.md  conf.py  index.md  index.rst
docs/diagrams/: classes_kafkaescli.app.mmd  classes_kafkaescli.app.plantuml  classes_kafkaescli.core.config.mmd  classes_kafkaescli.core.config.plantuml  classes_kafkaescli.core.consumer.mmd  classes_kafkaescli.core.consumer.plantuml  classes_kafkaescli.core.middleware.mmd  classes_kafkaescli.core.middleware.plantuml  classes_kafkaescli.core.mmd  classes_kafkaescli.core.plantuml  classes_kafkaescli.core.producer.mmd  classes_kafkaescli.core.producer.plantuml  classes_kafkaescli.core.shared.mmd  classes_kafkaescli.core.shared.plantuml  classes_kafkaescli.domain.mmd  classes_kafkaescli.domain.plantuml  classes_kafkaescli.infra.mmd  classes_kafkaescli.infra.plantuml  classes_kafkaescli.interface.mmd  classes_kafkaescli.interface.plantuml  classes_kafkaescli.lib.mmd  classes_kafkaescli.lib.plantuml
examples/: avro.py  config.json  json.py  log.conf.json  schema_registry.py
kafkaescli/: __main__.py  containers.py  services.py
kafkaescli/app/commands/: config.py  consumer.py  producer.py
kafkaescli/core/: models.py
kafkaescli/core/config/: models.py  services.py
kafkaescli/core/consumer/: models.py  services.py
kafkaescli/core/middleware/: models.py  services.py
kafkaescli/core/producer/: models.py  services.py
kafkaescli/core/shared/: models.py  services.py
kafkaescli/domain/: constants.py  models.py  schemas.py
kafkaescli/infra/: cli.py  containers.py  kafka.py  web.py  webhook.py
kafkaescli/infra/web/: __init__.py  api.py  schemas.py
kafkaescli/interface/: cli.py
kafkaescli/interface/web/: __init__.py  api.py  schemas.py
kafkaescli/lib/: commands.py  coroutines.py  kafka.py  middleware.py  results.py  webhook.py
kafkescli/: __main__.py
kafkescli/app/commands/: __init__.py  base.py  callback.py  config.py  consumer.py  producer.py
kafkescli/domain/: constants.py  models.py  types.py
kafkescli/infra/: cli.py  utils.py  web.py
kafkescli/lib/: commands.py  middleware.py  results.py
tests/: avro.py  json.py  schema_registry.py
tests/infra/: consumer.py  test_cli.py
tests/interface/: test_cli.py
