[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326, missing-module-docstring, missing-class-docstring, missing-function-docstring, missing-method-docstring, too-few-public-methods"

[tool.pylint.format]
max-line-length = "119"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.poetry]
name = "kafkescli"
version = "0.1.0"
description = ""
authors = ["Jony Kalavera <mr.jony@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
aiokafka = "^0.7.2"
result = {version = "^0.7.0", allow-prereleases = true}
typer = "^0.4.1"
aiohttp = "^3.8.1"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
isort = "^5.10.1"
pytest = "^6.2.5"
pytest-mock = "^3.7.0"
ipython = "^8.0.1"
mypy = "^0.931"
pytest-faker = "^2.0.0"
types-requests = "^2.27.9"
ipdb = "^0.13.9"
pydantic-factories = "^1.2.7"
py2puml = {git = "https://github.com/jonykalavera/py2puml.git"}
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
